--- a/P3/public/css/style.css
+++ b/P3/public/css/style.css
@@ -333,6 +333,17 @@ h1, h2, h3
 {
     margin-top: 30px;
 }
+/* Tableau des membres */
+thead th
+{
+    text-align: center;
+}
+tbody td
+{
+    border: 1px solid #bdbdbd;
+    padding: 5px 10px 5px 10px;
+    text-align: center;
+}
 
 /* CONTENU MENTIONS LEGALES */
 .mention_contenu{
