--- a/P3/public/css/style.css
+++ b/P3/public/css/style.css
@@ -89,17 +89,18 @@ h1, h2, h3
     text-align:center;
     }
 #menu .dropdown li {
-    float:left;
+
     margin:auto;
     padding:0;
     background-color:#2b2b2b;
     }
 #menu .dropdown li a {
     display:block;
-    width:100px;
+    width:auto;
+    min-width: 100px;
     color:white;
     text-decoration:none;
-    padding:5px;
+    padding: 5px 0 5px 0;
     }
 #menu .dropdown li a:hover {
     color:#f27300;
@@ -118,14 +119,17 @@ h1, h2, h3
     position:absolute;
 }
 
-#menu {
-    height:50px;
-}
-
 /* MENU DEROULANT ACCUEIL */
 #introduction #menu .dropdown li {
-    background-color:rgba(43, 43, 43, 0.5);
+    background-color:rgba(43, 43, 43, 0.3);
     }
+
+/* MENU RESPONSIVE BURGER */
+
+
+
+/* PAGINATION */
+
 
 /* INTRODUCTION */
 #introduction{
